# phantomx_ros2_isaaclab_policy_control

install/phantomx_package/lib/phantomx_package/: phantomx_apply_policy.py  phantomx_node  phantomx_node.py
install/phantomx_package/share/phantomx_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/phantomx_package/share/phantomx_package/launch/: launch_phantomx_policycontroll.launch.py
install/phantomx_package/share/phantomx_package/scripts/policy/: phantomx_apply_policy.py  policy.pt
log/: latest_build
src/phantomx_package/: CMakeLists.txt
src/phantomx_package/scripts/controll_joints/: phantomx_node_multi_joints.py
src/phantomx_package/scripts/policy/: template_phantomx_thesis_direct_v0_IO_descriptors.yaml
src/phantomx_package/src/: export_policy.py  fake_imu_data.py  fake_joint_state.py  phantomx_manual_node.py
